Adding Werror, Segmentation Fault problem

--- a/Algoithm1/Makefile
+++ b/Algoithm1/Makefile
@@ -5,14 +5,14 @@ SOURCES=initializer.c helper.c main.c
 # --------
 CC=gcc
 
-CFLAGS=-Werror -pedantic -Wall -std=gnu99 -O3
+CFLAGS= -Werror -pedantic -Wall -std=gnu99 -O3
 
 # Linker flags
 # ------------
 LDFLAGS=-lm
 
 OBJECTS=$(SOURCES:.c=.o)
-EXECUTABLE=Algorithm1
+EXECUTABLE=Example
 
 all: $(EXECUTABLE)
 
